feat: add checked in event orders page
